--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre - Portafolio</title>
+    <title>Mauricio Navarro - Portafolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header class="hero">
-        <div class="hero-content">
-            <h1>José Pérez</h1>
-            <h2>Ingeniero de Videojuegos | Programador</h2>
-            <p>Especializado en el desarrollo de mecánicas de juego innovadoras y sistemas de alto rendimiento.</p>
-            <div class="social-links">
-                <a href="#" target="_blank">LinkedIn</a>
-                <a href="#" target="_blank">GitHub</a>
-                <a href="#">Contacto</a>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#inicio" class="logo">Mauricio Navarro</a>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
+            <ul class="nav-links" id="nav-menu">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sobre-mi">Sobre Mí</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header id="inicio" class="hero">
+        <div class="hero-content">
+            <h1>Mauricio Navarro G.</h1>
+            <h2>Ingeniero de Videojuegos | Programador</h2>
+            <p>Apasionado desarrollador junior de experiencias interactivas, con conocimientos en Unity 6 y Unreal Engine 5.</p>
         </div>
     </header>
 
@@ -32,24 +44,56 @@
 
         <section id="proyectos" class="section">
             <h2>Mis Proyectos</h2>
+            <p>Haz clic en cualquier proyecto para ver los detalles.</p>
             
+            <div class="projects-grid">
+                <a href="#juego-1" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Juego+1" alt="Imagen del Juego 1">
+                    <h3>Juego 1</h3>
+                </a>
+                <a href="#juego-2" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Juego+2" alt="Imagen del Juego 2">
+                    <h3>Juego 2</h3>
+                </a>
+                </div>
+        </section>
+
+        <section id="juego-1" class="section project-detail-section">
             <div class="project-card">
                 <div class="project-images">
                     <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+1" alt="Captura del juego 1">
                     <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+2" alt="Captura del juego 2">
                 </div>
-                <h3>Nombre del Juego</h3>
+                <h3>Nombre del Juego 1</h3>
                 <p>Breve descripción del proyecto, su objetivo y su temática. ¿Es un RPG, un juego de plataformas, un simulador?</p>
                 <p><strong>Mi Rol:</strong> Me encargué de programar las mecánicas de combate, la inteligencia artificial de los enemigos y el sistema de guardado de datos.</p>
                 <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
             </div>
-            </section>
+        </section>
+
+        <section id="juego-2" class="section project-detail-section">
+            <div class="project-card">
+                <div class="project-images">
+                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+3" alt="Captura del juego 3">
+                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+4" alt="Captura del juego 4">
+                </div>
+                <h3>Nombre del Juego 2</h3>
+                <p>Breve descripción del proyecto, su objetivo y su temática.</p>
+                <p><strong>Mi Rol:</strong> Me encargué de la programación de los controles del jugador y la interfaz de usuario (UI).</p>
+                <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
+            </div>
+        </section>
 
     </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 José Pérez. Todos los derechos reservados.</p>
+    <footer id="contacto" class="footer">
+        <div class="social-links">
+            <a href="#" target="_blank">LinkedIn</a>
+            <a href="#" target="_blank">GitHub</a>
+        </div>
+        <p>&copy; 2025 Mauricio Navarro. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
