--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mauricio Navarro - Portafolio</title>
+    <title>Mauricio Navarro - Inicio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,22 +11,22 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="#inicio" class="logo">Mauricio Navarro</a>
+            <a href="index.html" class="logo">Mauricio Navarro</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="nav-links" id="nav-menu">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#sobre-mi">Sobre Mí</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sobre-mi.html">Sobre Mí</a></li>
+                <li><a href="proyectos.html">Proyectos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
 
-    <header id="inicio" class="hero">
+    <header class="hero">
         <div class="hero-content">
             <h1>Mauricio Navarro G.</h1>
             <h2>Ingeniero de Videojuegos | Programador</h2>
@@ -35,62 +35,26 @@
     </header>
 
     <main class="container">
-
-        <section id="sobre-mi" class="section">
-            <h2>Sobre Mí</h2>
-            <p>Soy un programador de videojuegos con experiencia en la creación de experiencias interactivas con **Unity 6**. Actualmente, estoy expandiendo mis habilidades al aprender y explorar el potencial de **Unreal Engine 5**.</p>
-            <p>Me apasiona resolver problemas complejos y optimizar el rendimiento del código para garantizar una jugabilidad fluida y envolvente en cada proyecto.</p>
-        </section>
-
-        <section id="proyectos" class="section">
+        
+        <section id="proyectos-galeria" class="section">
             <h2>Mis Proyectos</h2>
             <p>Haz clic en cualquier proyecto para ver los detalles.</p>
             
             <div class="projects-grid">
-                <a href="#juego-1" class="project-card-grid">
+                <a href="proyectos.html#juego-1" class="project-card-grid">
                     <img src="https://via.placeholder.com/400x400.png?text=Juego+1" alt="Imagen del Juego 1">
                     <h3>Juego 1</h3>
                 </a>
-                <a href="#juego-2" class="project-card-grid">
+                <a href="proyectos.html#juego-2" class="project-card-grid">
                     <img src="https://via.placeholder.com/400x400.png?text=Juego+2" alt="Imagen del Juego 2">
                     <h3>Juego 2</h3>
                 </a>
                 </div>
         </section>
 
-        <section id="juego-1" class="section project-detail-section">
-            <div class="project-card">
-                <div class="project-images">
-                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+1" alt="Captura del juego 1">
-                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+2" alt="Captura del juego 2">
-                </div>
-                <h3>Nombre del Juego 1</h3>
-                <p>Breve descripción del proyecto, su objetivo y su temática. ¿Es un RPG, un juego de plataformas, un simulador?</p>
-                <p><strong>Mi Rol:</strong> Me encargué de programar las mecánicas de combate, la inteligencia artificial de los enemigos y el sistema de guardado de datos.</p>
-                <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
-            </div>
-        </section>
-
-        <section id="juego-2" class="section project-detail-section">
-            <div class="project-card">
-                <div class="project-images">
-                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+3" alt="Captura del juego 3">
-                    <img src="https://via.placeholder.com/800x450.png?text=Captura+de+pantalla+4" alt="Captura del juego 4">
-                </div>
-                <h3>Nombre del Juego 2</h3>
-                <p>Breve descripción del proyecto, su objetivo y su temática.</p>
-                <p><strong>Mi Rol:</strong> Me encargué de la programación de los controles del jugador y la interfaz de usuario (UI).</p>
-                <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
-            </div>
-        </section>
-
     </main>
 
-    <footer id="contacto" class="footer">
-        <div class="social-links">
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">GitHub</a>
-        </div>
+    <footer class="footer">
         <p>&copy; 2025 Mauricio Navarro. Todos los derechos reservados.</p>
     </footer>
 
