--- a/index.html
+++ b/index.html
@@ -41,15 +41,37 @@
             <p>Haz clic en cualquier proyecto para ver los detalles.</p>
             
             <div class="projects-grid">
-                <a href="proyectos.html#juego-1" class="project-card-grid">
-                    <img src="https://via.placeholder.com/400x400.png?text=Juego+1" alt="Imagen del Juego 1">
-                    <h3>Juego 1</h3>
+                
+                <a href="proyectos.html#beers-and-crystals" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Beers+%26+Crystals" alt="Imagen del juego Beers & Crystals">
+                    <h3>Beers & Crystals</h3>
                 </a>
-                <a href="proyectos.html#juego-2" class="project-card-grid">
-                    <img src="https://via.placeholder.com/400x400.png?text=Juego+2" alt="Imagen del Juego 2">
-                    <h3>Juego 2</h3>
+
+                <a href="proyectos.html#el-ultimo-viaje" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=El+ultimo+viaje" alt="Imagen del juego El ultimo viaje">
+                    <h3>El ultimo viaje</h3>
                 </a>
-                </div>
+
+                <a href="proyectos.html#simulador-sistema-solar" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Simulador+del+sistema+solar" alt="Imagen del Simulador del sistema solar">
+                    <h3>Simulador del sistema solar</h3>
+                </a>
+
+                <a href="proyectos.html#chess-rts-3d" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Chess+RTS+3D" alt="Imagen del juego Chess RTS 3D">
+                    <h3>Chess RTS 3D</h3>
+                </a>
+
+                <a href="proyectos.html#car-champions" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=Car-Champions" alt="Imagen del juego Car-Champions">
+                    <h3>Car-Champions</h3>
+                </a>
+
+                <a href="proyectos.html#en-construccion" class="project-card-grid">
+                    <img src="https://via.placeholder.com/400x400.png?text=En+construccion" alt="Imagen del proyecto En construccion">
+                    <h3>En construccion</h3>
+                </a>
+            </div>
         </section>
 
     </main>
