--- a/index.html
+++ b/index.html
@@ -43,32 +43,32 @@
             <div class="projects-grid">
                 
                 <a href="proyectos.html#beers-and-crystals" class="project-card-grid">
-                    <img src="Captura_Beers" alt="Imagen del juego Beers & Crystals">
+                    <img src="Captura_Beers.png" alt="Imagen del juego Beers & Crystals">
                     <h3>Beers & Crystals</h3>
                 </a>
 
                 <a href="proyectos.html#el-ultimo-viaje" class="project-card-grid">
-                    <img src="Captura_Ultimo_Viaje" alt="Imagen del juego El ultimo viaje">
+                    <img src="Captura_Ultimo_Viaje.png" alt="Imagen del juego El ultimo viaje">
                     <h3>El ultimo viaje</h3>
                 </a>
 
                 <a href="proyectos.html#simulador-sistema-solar" class="project-card-grid">
-                    <img src="Captura_Sistema_Solar" alt="Imagen del Simulador del sistema solar">
+                    <img src="Captura_Sistema_Solar.png" alt="Imagen del Simulador del sistema solar">
                     <h3>Simulador del sistema solar</h3>
                 </a>
 
                 <a href="proyectos.html#chess-rts-3d" class="project-card-grid">
-                    <img src="Captura_Chess" alt="Imagen del juego Chess RTS 3D">
+                    <img src="Captura_Chess.png" alt="Imagen del juego Chess RTS 3D">
                     <h3>Chess RTS 3D</h3>
                 </a>
 
                 <a href="proyectos.html#car-champions" class="project-card-grid">
-                    <img src="Captura_Car_Champions" alt="Imagen del juego Car-Champions">
+                    <img src="Captura_Car_Champions.png" alt="Imagen del juego Car-Champions">
                     <h3>Car-Champions</h3>
                 </a>
 
                 <a href="proyectos.html#en-construccion" class="project-card-grid">
-                    <img src="Under_Costruction" alt="Imagen del proyecto En construccion">
+                    <img src="Under_Costruction.png" alt="Imagen del proyecto En construccion">
                     <h3>En construccion</h3>
                 </a>
             </div>
