--- a/proyectos.html
+++ b/proyectos.html
@@ -69,8 +69,8 @@
                 <div class="project-card">
                     <h3>Simulador del sistema solar</h3>
                     <div class="project-images">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Simulador+del+sistema+solar+1" alt="Captura del Simulador del sistema solar">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Simulador+del+sistema+solar+2" alt="Captura del Simulador del sistema solar">
+                        <img src="Captura_Sitema_Solar_2.png">
+                        <img src="Captura_Sitema_Solar_3.png">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
                     <p><strong>Mi Rol:</strong></p>
@@ -86,8 +86,8 @@
                 <div class="project-card">
                     <h3>Chess RTS 3D</h3>
                     <div class="project-images">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Chess+RTS+3D+1" alt="Captura del juego Chess RTS 3D">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Chess+RTS+3D+2" alt="Captura del juego Chess RTS 3D">
+                        <img src="Captura_Chess_2.png">
+                        <img src="Captura_Chess_3.png">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
                     <p><strong>Mi Rol:</strong></p>
