--- a/proyectos.html
+++ b/proyectos.html
@@ -69,8 +69,8 @@
                 <div class="project-card">
                     <h3>Simulador del sistema solar</h3>
                     <div class="project-images">
-                        <img src="Captura_Sitema_Solar_2.png">
-                        <img src="Captura_Sitema_Solar_3.png">
+                        <img src="Captura_Sistema_Solar_2.png">
+                        <img src="Captura_Sistema_Solar_3.png">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
                     <p><strong>Mi Rol:</strong></p>
