--- a/proyectos.html
+++ b/proyectos.html
@@ -37,12 +37,12 @@
                         <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Beers+%26+Crystals+1" alt="Captura del juego Beers & Crystals">
                         <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Beers+%26+Crystals+2" alt="Captura del juego Beers & Crystals">
                     </div>
-                    <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática. Habla del género del juego (RPG, simulador, etc.).</p>
-                    <p><strong>Mi Rol:</strong></p>
+                    <p>Este juego es un Roguelike ambientado en una cueva donde controlaras a Barret un enano minero el cual esta en busqueda de la cerveza milenaria que se encuentra dentro de esta cueva, puedes usar su barba para atacar a los diferentes enemigos y romper crystales. (Solo es un nivel tutorial, continua en desarrollo).</p>
+                    <p><strong>Mi Rol:</strong> Programador y Lider de proyecto</p>
                     <ul>
-                        <li>[Tu función específica aquí, ej: Programación de la IA de los personajes.]</li>
-                        <li>[Otra función, ej: Implementación de la física y el movimiento del jugador.]</li>
-                        <li>[Otra función, ej: Desarrollo del sistema de guardado y carga.]</li>
+                        <li>En este proyecto trabaje como unico programador, desarrolle todas las mecanicas y funcionalidades del juego.</li>
+                        <li>Ademas de ser parte de el diseño del juego e idea general</li>
+                        <li>Me encargue de realizar las maquinas de estado de todos los personajes tanto jugador como enemigos</li>
                     </ul>
                     <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
@@ -55,11 +55,11 @@
                         <img src="https://via.placeholder.com/800x450.png?text=Captura+de+El+ultimo+viaje+1" alt="Captura del juego El ultimo viaje">
                         <img src="https://via.placeholder.com/800x450.png?text=Captura+de+El+ultimo+viaje+2" alt="Captura del juego El ultimo viaje">
                     </div>
-                    <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
-                    <p><strong>Mi Rol:</strong></p>
+                    <p>Este es un juego centrado en un de los infiernos del mictlan, en donde tras ser sacrificado quedas ciego y en base a tus otros instintos, deberas de moverte por un mundo semi abierto, donde deberas recolectar 5 almas, guiandote solo por recuerdos de tu pasado y guias astrales.</p>
+                    <p><strong>Mi Rol:</strong> Programador</p>
                     <ul>
-                        <li>[Tu función específica aquí]</li>
-                        <li>[Otra función]</li>
+                        <li>Encargado de la funcionalidad de eventos del juego, Talismanes, Enemigos y Guias espirituales.</li>
+                        <li>Realizacion de shaders del mapa y personajes</li>
                     </ul>
                     <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
@@ -73,12 +73,12 @@
                         <img src="Captura_Sistema_Solar_3.png">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
-                    <p><strong>Mi Rol:</strong></p>
+                    <p><strong>Mi Rol:</strong>Programador</p>
                     <ul>
                         <li>[Tu función específica aquí]</li>
                         <li>[Otra función]</li>
                     </ul>
-                    <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
+                    <a href="https://drive.google.com/drive/folders/1PN0QzAaJE3zpgDrL_rB6ycB2gL5WyuAT?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
             </section>
             
@@ -90,7 +90,7 @@
                         <img src="Captura_Chess_3.png">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
-                    <p><strong>Mi Rol:</strong></p>
+                    <p><strong>Mi Rol:</strong>Programador</p>
                     <ul>
                         <li>[Tu función específica aquí]</li>
                         <li>[Otra función]</li>
@@ -107,7 +107,7 @@
                         <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Car-Champions+2" alt="Captura del juego Car-Champions">
                     </div>
                     <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
-                    <p><strong>Mi Rol:</strong></p>
+                    <p><strong>Mi Rol:</strong>Prigramador</p>
                     <ul>
                         <li>[Tu función específica aquí]</li>
                         <li>[Otra función]</li>
