--- a/proyectos.html
+++ b/proyectos.html
@@ -52,13 +52,14 @@
                 <div class="project-card">
                     <h3>El ultimo viaje</h3>
                     <div class="project-images">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+El+ultimo+viaje+1" alt="Captura del juego El ultimo viaje">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+El+ultimo+viaje+2" alt="Captura del juego El ultimo viaje">
+                        <img src="Captura_Ultimo_Viaje_2.png">
+                        <img src="Captura_Ultimo_Viaje_3.png">
                     </div>
                     <p>Este es un juego centrado en un de los infiernos del mictlan, en donde tras ser sacrificado quedas ciego y en base a tus otros instintos, deberas de moverte por un mundo semi abierto, donde deberas recolectar 5 almas, guiandote solo por recuerdos de tu pasado y guias astrales.</p>
                     <p><strong>Mi Rol:</strong> Programador</p>
                     <ul>
                         <li>Encargado de la funcionalidad de eventos del juego, Talismanes, Enemigos y Guias espirituales.</li>
+                        <li>Encargado de la interaccion con las almas y dialogos, ademas de condiciones de victoria y finales</li>
                         <li>Realizacion de shaders del mapa y personajes</li>
                     </ul>
                     <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
