--- a/proyectos.html
+++ b/proyectos.html
@@ -34,8 +34,8 @@
                 <div class="project-card">
                     <h3>Beers & Crystals</h3>
                     <div class="project-images">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Beers+%26+Crystals+1" alt="Captura del juego Beers & Crystals">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Beers+%26+Crystals+2" alt="Captura del juego Beers & Crystals">
+                        <img src="Captura_Beers_2.png>
+                        <img src="Captura_Beers_3.png">
                     </div>
                     <p>Este juego es un Roguelike ambientado en una cueva donde controlaras a Barret un enano minero el cual esta en busqueda de la cerveza milenaria que se encuentra dentro de esta cueva, puedes usar su barba para atacar a los diferentes enemigos y romper crystales. (Solo es un nivel tutorial, continua en desarrollo).</p>
                     <p><strong>Mi Rol:</strong> Programador y Lider de proyecto</p>
@@ -44,7 +44,7 @@
                         <li>Ademas de ser parte de el diseño del juego e idea general</li>
                         <li>Me encargue de realizar las maquinas de estado de todos los personajes tanto jugador como enemigos</li>
                     </ul>
-                    <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
+                    <a href="https://drive.google.com/drive/folders/1CFlTs2WAhchwTgOFUtKUYVQUJvlMkfRv?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
             </section>
             
@@ -62,7 +62,7 @@
                         <li>Encargado de la interaccion con las almas y dialogos, ademas de condiciones de victoria y finales</li>
                         <li>Realizacion de shaders del mapa y personajes</li>
                     </ul>
-                    <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
+                    <a href="https://drive.google.com/drive/folders/18ZMqqbXhT3EK5HQR4zVAIU4N4qO7MwSV?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
             </section>
             
@@ -73,11 +73,11 @@
                         <img src="Captura_Sistema_Solar_2.png">
                         <img src="Captura_Sistema_Solar_3.png">
                     </div>
-                    <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
+                    <p>Este es un proyecto en el cual se realiza un simulador del sistema solar con 3 modos de camara y 4 modos de velocidad de simulacion</p>
                     <p><strong>Mi Rol:</strong>Programador</p>
                     <ul>
-                        <li>[Tu función específica aquí]</li>
-                        <li>[Otra función]</li>
+                        <li>Implementacion de calculos de variables dentro de scripts en C# ademas de creacion de script que calcula las orbitas para que sean mas etables.</li>
+                        <li>Modelos realizados por Christian Alonso XD</li>
                     </ul>
                     <a href="https://drive.google.com/drive/folders/1PN0QzAaJE3zpgDrL_rB6ycB2gL5WyuAT?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
@@ -90,11 +90,11 @@
                         <img src="Captura_Chess_2.png">
                         <img src="Captura_Chess_3.png">
                     </div>
-                    <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
+                    <p>Este es un juego estilo RTS con tematica de ajedress realizado como proyecto de mis estudios.</p>
                     <p><strong>Mi Rol:</strong>Programador</p>
                     <ul>
-                        <li>[Tu función específica aquí]</li>
-                        <li>[Otra función]</li>
+                        <li>Desarrolle todas las mecanicas, pantallas y menus, ademas del sistema de pausa, los modelos son descargados de internet.</li>
+                        <li>Cree un sistema simple de inteligencia para el jugador NPC.</li>
                     </ul>
                     <a href="https://drive.google.com/drive/folders/1TeHY3d_UryVly2k7iQ4En_3FK53W1kki?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
@@ -104,16 +104,16 @@
                 <div class="project-card">
                     <h3>Car-Champions</h3>
                     <div class="project-images">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Car-Champions+1" alt="Captura del juego Car-Champions">
-                        <img src="https://via.placeholder.com/800x450.png?text=Captura+de+Car-Champions+2" alt="Captura del juego Car-Champions">
+                        <img src="Capturas_Car_Champions_2.png">
+                        <img src="Capturas_Car_Champions_3.png">
                     </div>
-                    <p>Aquí va una breve descripción del proyecto, su objetivo, y su temática.</p>
-                    <p><strong>Mi Rol:</strong>Prigramador</p>
+                    <p>Este es un proyecto en el cual intento recrear el famoso juego rocket league en Unity.</p>
+                    <p><strong>Mi Rol:</strong>Programador</p>
                     <ul>
-                        <li>[Tu función específica aquí]</li>
-                        <li>[Otra función]</li>
+                        <li>Desarrolle todas las mecanicas, pantallas y menus, ademas del sistema de pausa, los modelos son descargados de internet.</li>
+                        <li>Implementacion de un controlar de vehiculo con Wells Colliders.</li>
                     </ul>
-                    <a href="#" class="download-btn" target="_blank">Descargar Juego</a>
+                    <a href="https://drive.google.com/drive/folders/1-lsW_FsNLXB1HaR-oj4g8A-Dnr-45vYv?usp=sharing" class="download-btn" target="_blank">Descargar Juego</a>
                 </div>
             </section>
 
@@ -127,8 +127,8 @@
                     <p>Este proyecto está actualmente en desarrollo. ¡Pronto habrá más detalles!</p>
                     <p><strong>Mi Rol:</strong></p>
                     <ul>
-                        <li>[Tu función específica aquí]</li>
-                        <li>[Otra función]</li>
+                        <li>Programacion de todas las funcionalidades</li>
+                        <li>Primer proyecto en Unreal Engine 5</li>
                     </ul>
                     <a href="#" class="download-btn" target="_blank">Más información pronto</a>
                 </div>
