--- a/proyectos.html
+++ b/proyectos.html
@@ -34,7 +34,7 @@
                 <div class="project-card">
                     <h3>Beers & Crystals</h3>
                     <div class="project-images">
-                        <img src="Captura_Beers_2.png>
+                        <img src="Captura_Beers_2.png">
                         <img src="Captura_Beers_3.png">
                     </div>
                     <p>Este juego es un Roguelike ambientado en una cueva donde controlaras a Barret un enano minero el cual esta en busqueda de la cerveza milenaria que se encuentra dentro de esta cueva, puedes usar su barba para atacar a los diferentes enemigos y romper crystales. (Solo es un nivel tutorial, continua en desarrollo).</p>
