--- a/proyectos.html
+++ b/proyectos.html
@@ -104,8 +104,8 @@
                 <div class="project-card">
                     <h3>Car-Champions</h3>
                     <div class="project-images">
-                        <img src="Capturas_Car_Champions_2.png">
-                        <img src="Capturas_Car_Champions_3.png">
+                        <img src="Captura_Car_Champions_2.png">
+                        <img src="Captura_Car_Champions_3.png">
                     </div>
                     <p>Este es un proyecto en el cual intento recrear el famoso juego rocket league en Unity.</p>
                     <p><strong>Mi Rol:</strong>Programador</p>
