--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -31,6 +31,8 @@
             <h2>Sobre Mí</h2>
             <p>Soy un programador de videojuegos con experiencia en la creación de experiencias interactivas con **Unity 6**. Actualmente, estoy expandiendo mis habilidades al aprender y explorar el potencial de **Unreal Engine 5**.</p>
             <p>Me apasiona resolver problemas complejos y optimizar el rendimiento del código para garantizar una jugabilidad fluida y envolvente en cada proyecto.</p>
+            <p>Considero que puedo seguir expandiendo mis conocimientos y habilidades mientras trabajo, constantemente me encuentro desarrollando proyectos nuevos para poner a prueba mis limites y lograr cosas mas completas y complejas.</p>
+
         </section>
     </main>
 
