--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mauricio Navarro - Inicio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="Fondo.png">
 </head>
 <body>
 
@@ -36,8 +36,8 @@
             <div class="hero-right">
                 <p>Apasionado desarrollador junior de experiencias interactivas,con conocimientos en Unity 6 y Unreal Engine 5.</p>
                 <div class="hero-images">
-                    <img src="https://via.placeholder.com/300x200.png?text=Captura+1" alt="Imagen representativa 1">
-                    <img src="https://via.placeholder.com/300x200.png?text=Captura+2" alt="Imagen representativa 2">
+                    <img src="Unity.png">
+                    <img src="Unreal.png">
                 </div>
             </div>
         </div>
