--- a/contacto.html
+++ b/contacto.html
@@ -30,10 +30,11 @@
         <section class="section">
             <h2>Contacto</h2>
             <p>Puedes contactarme a través de mis perfiles sociales. ¡Estoy siempre disponible para discutir nuevos proyectos!</p>
+            <p></p>
             <div class="social-links" style="text-align: center;">
                 <a href="#" target="_blank">LinkedIn</a>
-                <a href="#" target="_blank">GitHub</a>
-                <a href="mailto:tucorreo@ejemplo.com">Email</a>
+                <a href="https://github.com/ELCHORE709?tab=repositories" target="_blank">GitHub</a>
+                <a href="Mauricio.Navarro8070@gmail.com">Email</a>
             </div>
         </section>
     </main>
