--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
             <div class="social-links" style="text-align: center;">
                 <a href="#" target="_blank">LinkedIn</a>
                 <a href="https://github.com/ELCHORE709?tab=repositories" target="_blank">GitHub</a>
-                <a href="Mauricio.Navarro8070@gmail.com">Email</a>
+                <a href="Mauricionavarrogon@gmail.com">Email</a>
             </div>
         </section>
     </main>
