--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -28,11 +28,73 @@
 
     <main class="container">
         <section class="section">
-            <h2>Sobre Mí</h2>
-            <p>Soy un programador de videojuegos con experiencia en la creación de experiencias interactivas con Unity 6. Actualmente, estoy expandiendo mis habilidades al aprender y explorar el potencial de Unreal Engine 5.</p>
-            <p>Me apasiona resolver problemas complejos y optimizar el rendimiento del código para garantizar una jugabilidad fluida y envolvente en cada proyecto.</p>
-            <p>Considero que puedo seguir expandiendo mis conocimientos y habilidades mientras trabajo, constantemente me encuentro desarrollando proyectos nuevos para poner a prueba mis limites y lograr cosas mas completas y complejas.</p>
+            <h2>Perfil Profesional</h2>
+            <div class="about-content">
+                <p>Mi transición profesional desde el soporte técnico IT hacia el desarrollo de videojuegos refleja una evolución natural de mi pasión por resolver problemas técnicos complejos. Tras años proporcionando soluciones de infraestructura tecnológica, decidí canalizar mis habilidades analíticas hacia la creación de experiencias interactivas.</p>
+                <br>
+                <p>Actualmente, trabajo como <strong>Level Designer en C111 Estudios</strong>, donde diseño experiencias multijugador para Fortnite utilizando UEFN bajo acuerdos de confidencialidad, combinando limitaciones técnicas con necesidades creativas.</p>
+            </div>
+        </section>
 
+        <section class="section">
+            <h2>Habilidades Técnicas (Hard Skills)</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <h3>💻 Lenguajes & Arquitectura</h3>
+                    <ul>
+                        <li><strong>C# (Avanzado):</strong> Unity, Arquitectura SOLID, Patrones de Diseño (Singleton, Observer, State Machine).</li>
+                        <li><strong>Verse:</strong> Scripting para UEFN/Fortnite Creative.</li>
+                        <li><strong>Blueprints:</strong> Lógica de Gameplay en Unreal Engine 5.</li>
+                    </ul>
+                </div>
+                
+                <div class="skill-card">
+                    <h3>⚙️ Motores de Juego</h3>
+                    <ul>
+                        <li><strong>Unity 6:</strong> Generación procedural, IA (FSM), Pathfinding (A*).</li>
+                        <li><strong>Unreal Engine 5:</strong> Level Design, Optimización de Assets.</li>
+                        <li><strong>UEFN:</strong> Creación de experiencias multijugador.</li>
+                    </ul>
+                </div>
+
+                <div class="skill-card">
+                    <h3>🛠️ Herramientas</h3>
+                    <ul>
+                        <li><strong>Git/GitHub:</strong> Control de versiones y flujo de trabajo.</li>
+                        <li><strong>Profiling:</strong> Análisis de memoria y optimización.</li>
+                        <li><strong>Soporte IT:</strong> Diagnóstico de Hardware y Redes.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2>Formación y Certificaciones</h2>
+            <div class="cert-container">
+                <div class="cert-card featured-cert">
+                    <div class="cert-info">
+                        <h3>Unity 2D Dungeon Gunner Roguelike Development</h3>
+                        <p class="cert-source">Udemy | Instructor: Rob Ager</p>
+                        <p>Curso intensivo de <strong>51 horas</strong> especializado en arquitectura de código escalable.</p>
+                        <ul>
+                            <li>Generación procedural de mazmorras.</li>
+                            <li>Sistemas de combate y Máquinas de Estados para IA.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Ingeniería en Videojuegos</h3>
+                    <p class="cert-source">Universidad [Tu Universidad]</p>
+                    <p>Grado en curso (Finalización: 2026)</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Unreal Engine: Fundamentos y Materiales</h3>
+                    <p class="cert-source">Plataforma de Aprendizaje</p>
+                    <p>Especialización en Shaders y Blueprint Scripting.</p>
+                </div>
+            </div>
         </section>
     </main>
 
